--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,17 @@
             <artifactId>spring-boot-starter-mail</artifactId>
             <version>2.7.3</version>
         </dependency>
+        <dependency>
+            <groupId>biz.paluch.redis</groupId>
+            <artifactId>lettuce</artifactId>
+            <version>3.2.Final</version>
+        </dependency>
+
+        <!-- Web Socket -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
